# getcolor

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
deb/: getcolor-dbgsym_1.0.1_amd64.deb  getcolor_1.0.1_amd64.deb
debian/: changelog  control  rules
getcolor/: CMakeLists.txt  getcolor.pro  mainwindow.cpp  mainwindow.h  qpickwidget.cpp  qpickwidget.h
getcolor/desktop/: getcolor.desktop
